# zeta-zapad

./: .dockerignore  README.md  pyproject.toml  requirements.txt
docker_compose/: storage.yaml
src/: main.py
src/common/: database.py  settings.py
src/models/: carts_entity.py  orders_entity.py  role_entity.py  roles_entity.py  users_entity.py
src/routes/: auth_route.py  carts_route.py  orders_route.py  roles_route.py  settings_route.py  users_route.py
src/schemas/: carts_schema.py  orders_schema.py  roles_schemas.py  users_schema.py
src/services/: auth_service.py  email_service.py  orders_service.py  roles_service.py  users_service.py
